--- a/cdap-ui/app/features/hydratorplusplus/templates/partial/preview.html
+++ b/cdap-ui/app/features/hydratorplusplus/templates/partial/preview.html
@@ -16,8 +16,67 @@
 
 <div ng-controller="HydratorPlusPlusPreviewTabCtrl as PreviewController" class="preview-tab">
 
-  <h2>Preview</h2>
-  <h3>{{ PreviewController.node.plugin.label }}</h3>
+  <div ng-if="PreviewController.node.plugin">
+    <div class="bottompanel-header clearfix">
+      <h3>Preview Data: {{ PreviewController.node.plugin.label }}</h3>
+    </div>
 
-  <pre>{{ PreviewController.node | json:4 }}</pre>
+    <div class="bottompanel-body">
+      <div class="row" ng-if="PreviewController.node.previewData">
+        <!-- INPUT RECORD -->
+        <div class="col-xs-6">
+          <h4>Input Records</h4>
+
+          <table class="table" ng-if="PreviewController.node.previewData.inputRecord">
+            <thead>
+              <th>Key</th>
+              <th>Value</th>
+            </thead>
+            <tbody>
+              <tr ng-repeat="(key, value) in PreviewController.node.previewData.inputRecord">
+                <td>{{ key }}</td>
+                <td>{{ value }}</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <div class="no-records text-center" ng-if="!PreviewController.node.previewData.inputRecord">
+            <p>No input records.</p>
+          </div>
+        </div>
+
+        <!-- OUTPUT RECORD -->
+        <div class="col-xs-6">
+          <h4>Output Record</h4>
+
+          <table class="table" ng-if="PreviewController.node.previewData.outputRecord">
+            <thead>
+              <th>Key</th>
+              <th>Value</th>
+            </thead>
+            <tbody>
+              <tr ng-repeat="(key, value) in PreviewController.node.previewData.outputRecord">
+                <td>{{ key }}</td>
+                <td>{{ value }}</td>
+              </tr>
+            </tbody>
+          </table>
+
+          <div class="no-records text-center" ng-if="!PreviewController.node.previewData.outputRecord">
+            <p>No output records.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row" ng-if="!PreviewController.node.previewData">
+        <div class="col-xs-12">
+          <p>No preview data available. Please press preview button on the top panel.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="bottompanel-body empty" ng-if="!PreviewController.node.plugin">
+    <p>Please select a plugin to view preview data.</p>
+  </div>
 </div>
