--- a/cdap-ui/app/features/hydratorplusplus/leftpanel.less
+++ b/cdap-ui/app/features/hydratorplusplus/leftpanel.less
@@ -543,10 +543,13 @@ body.theme-cdap.state-hydratorplusplus-create {
         }
       }
     }
-
-    @media(min-width: @screen-md) {
-      .modal-lg {
-        width: 600px;
+  }
+  @media(min-width: @screen-md) {
+    .modal {
+      &.load-artifact-modal {
+        .modal-lg {
+          width: 600px;
+        }
       }
     }
   }
