--- a/cdap-ui/app/features/hydratorplusplus/templates/create/popovers/load-artifact.html
+++ b/cdap-ui/app/features/hydratorplusplus/templates/create/popovers/load-artifact.html
@@ -66,7 +66,7 @@
 
 <div class="modal-footer">
   <button class="btn btn-grey" ng-click="$close()">Cancel</button>
-  <button class="btn btn-orange" ng-click="LoadArtifactCtrl.upload()" ng-disabled="LoadArtifactCtrl.artifactName.length === 0 || LoadArtifactCtrl.artifactVersion.length === 0">Upload</button>
+  <button class="btn btn-orange" ng-click="LoadArtifactCtrl.upload()" ng-disabled="LoadArtifactCtrl.jsonStatus !== 1 || LoadArtifactCtrl.jarStatus !== 1">Upload</button>
 </div>
 
 <my-file-select class="sr-only"
