--- a/cdap-ui/app/features/hydratorplusplus/hydrator-modal.less
+++ b/cdap-ui/app/features/hydratorplusplus/hydrator-modal.less
@@ -74,4 +74,13 @@
     }
 
   }
+
+  &.get-schema-modal {
+    .modal-dialog {
+      textarea.form-control {
+        width: 90%;
+        margin-bottom: 10px;
+      }
+    }
+  }
 }
